# theuth

./: .env  .gitignore  Cargo.toml  README.md  db.sql
doc/: api.org  parcours.rst
migrations/2020-12-06-132927_initial_schema/: down.sql  up.old.sql  up.sql
migrations/2020-12-20-171818_programme_officiel/: down.sql  up.sql
migrations/2020-12-28-132139_create_authors_and_works/: down.sql  up.sql
migrations/2020-12-28-152007_create_users_and_sessions/: up.sql
server_templates/: email-address-confirmation-email.md
src/: README.md  main.rs  models.rs  schema.rs  server.rs
theuth-web/: .editorconfig  .eslintcache  package-lock.json  package.json
theuth-web/public/: index.html
theuth-web/src/: App.js  App.scss  theuth-api.ts
web/: theuth.css  theuth.css.map  theuth.scss
web/tests/: index.html
